rlctbg/raylib.h

    typedef enum { false, true } bool;
typedef struct Vector2 {
    float x;
    float y;
} Vector2;
typedef struct Vector3 {
    float x;
    float y;
    float z;
} Vector3;
typedef struct Matrix {
    float m0, m4, m8, m12;
    float m1, m5, m9, m13;
    float m2, m6, m10, m14;
    float m3, m7, m11, m15;
} Matrix;
typedef struct Color {
    unsigned char r;
    unsigned char g;
    unsigned char b;
    unsigned char a;
} Color;
typedef struct Rectangle {
    float x;
    float y;
    float width;
    float height;
} Rectangle;
typedef struct Texture2D {
    unsigned int id;        
    int width;              
    int height;             
    int mipmaps;            
    int format;             
} Texture2D;
typedef struct CharInfo {
    int value;              
    int offsetX;            
    int offsetY;            
    int advanceX;           
    Image image;            
} CharInfo;
typedef struct Font {
    int baseSize;           
    int charsCount;         
    Texture2D texture;      
    Rectangle *recs;        
    CharInfo *chars;        
} Font;
typedef struct Mesh {
    int vertexCount;        
    int triangleCount;      
    float *vertices;        
    float *texcoords;       
    float *texcoords2;      
    float *normals;         
    float *tangents;        
    unsigned char *colors;  
    unsigned short *indices;
    float *animVertices;    
    float *animNormals;     
    int *boneIds;           
    float *boneWeights;     
    unsigned int vaoId;     
    unsigned int *vboId;    
} Mesh;
typedef struct Shader {
    unsigned int id;        
    int *locs;              
} Shader;
typedef struct MaterialMap {
    Texture2D texture;      
    Color color;            
    float value;            
} MaterialMap;
typedef struct Material {
    Shader shader;          
    MaterialMap *maps;      
    float *params;          
} Material;
typedef struct Transform {
    Vector3 translation;    
    Quaternion rotation;    
    Vector3 scale;          
} Transform;
typedef struct BoneInfo {
    char name[32];          
    int parent;             
} BoneInfo;
typedef struct Model {
    Matrix transform;       
    int meshCount;          
    Mesh *meshes;           
    int materialCount;      
    Material *materials;    
    int *meshMaterial;      
    int boneCount;          
    BoneInfo *bones;        
    Transform *bindPose;    
} Model;
typedef struct ModelAnimation {
    int boneCount;          
    BoneInfo *bones;        
    int frameCount;         
    Transform **framePoses; 
} ModelAnimation;
typedef struct Ray {
    Vector3 position;       
    Vector3 direction;      
} Ray;
RLAPI int MeasureText(const char *text, int fontSize);                                      
RLAPI Vector2 MeasureTextEx(Font font, const char *text, float fontSize, float spacing);    
RLAPI int GetGlyphIndex(Font font, int codepoint);                                          
RLAPI bool TextIsEqual(const char *text1, const char *text2);                               
RLAPI unsigned int TextLength(const char *text);                                            
RLAPI const char *TextFormat(const char *text, ...);                                        
RLAPI const char *TextSubtext(const char *text, int position, int length);                  
RLAPI char *TextReplace(char *text, const char *replace, const char *by);                   
RLAPI char *TextInsert(const char *text, const char *insert, int position);                 
RLAPI const char *TextJoin(const char **textList, int count, const char *delimiter);        
RLAPI const char **TextSplit(const char *text, char delimiter, int *count);                 
RLAPI void TextAppend(char *text, const char *append, int *position);                       
RLAPI int TextFindIndex(const char *text, const char *find);                                
RLAPI const char *TextToUpper(const char *text);                      
RLAPI const char *TextToLower(const char *text);                      
RLAPI const char *TextToPascal(const char *text);                     
RLAPI int TextToInteger(const char *text);                            
RLAPI char *TextToUtf8(int *codepoints, int length);                  
RLAPI int *GetCodepoints(const char *text, int *count);               
RLAPI int GetCodepointsCount(const char *text);                       
RLAPI int GetNextCodepoint(const char *text, int *bytesProcessed);    
RLAPI const char *CodepointToUtf8(int codepoint, int *byteLength);    
RLAPI void DrawLine3D(Vector3 startPos, Vector3 endPos, Color color);                                    
RLAPI void DrawCircle3D(Vector3 center, float radius, Vector3 rotationAxis, float rotationAngle, Color color); 
RLAPI void DrawCube(Vector3 position, float width, float height, float length, Color color);             
RLAPI void DrawCubeV(Vector3 position, Vector3 size, Color color);                                       
RLAPI void DrawCubeWires(Vector3 position, float width, float height, float length, Color color);        
RLAPI void DrawCubeWiresV(Vector3 position, Vector3 size, Color color);                                  
RLAPI void DrawCubeTexture(Texture2D texture, Vector3 position, float width, float height, float length, Color color); 
RLAPI void DrawSphere(Vector3 centerPos, float radius, Color color);                                     
RLAPI void DrawSphereEx(Vector3 centerPos, float radius, int rings, int slices, Color color);            
RLAPI void DrawSphereWires(Vector3 centerPos, float radius, int rings, int slices, Color color);         
RLAPI void DrawCylinder(Vector3 position, float radiusTop, float radiusBottom, float height, int slices, Color color); 
RLAPI void DrawCylinderWires(Vector3 position, float radiusTop, float radiusBottom, float height, int slices, Color color); 
RLAPI void DrawPlane(Vector3 centerPos, Vector2 size, Color color);                                      
RLAPI void DrawRay(Ray ray, Color color);                                                                
RLAPI void DrawGrid(int slices, float spacing);                                                          
RLAPI void DrawGizmo(Vector3 position);                                                                  
RLAPI Model LoadModel(const char *fileName);                                                            
RLAPI Model LoadModelFromMesh(Mesh mesh);                                                               
RLAPI void UnloadModel(Model model);                                                                    
RLAPI Mesh *LoadMeshes(const char *fileName, int *meshCount);                                           
RLAPI void ExportMesh(Mesh mesh, const char *fileName);                                                 
RLAPI void UnloadMesh(Mesh mesh);                                                                       
RLAPI Material *LoadMaterials(const char *fileName, int *materialCount);                                
RLAPI Material LoadMaterialDefault(void);                                                               
RLAPI void UnloadMaterial(Material material);                                                           
RLAPI void SetMaterialTexture(Material *material, int mapType, Texture2D texture);                      
RLAPI void SetModelMeshMaterial(Model *model, int meshId, int materialId);                              
RLAPI ModelAnimation *LoadModelAnimations(const char *fileName, int *animsCount);                       
RLAPI void UpdateModelAnimation(Model model, ModelAnimation anim, int frame);                           
RLAPI void UnloadModelAnimation(ModelAnimation anim);                                                   
RLAPI bool IsModelAnimationValid(Model model, ModelAnimation anim);                                     
RLAPI Mesh GenMeshPoly(int sides, float radius);                                                        
RLAPI Mesh GenMeshPlane(float width, float length, int resX, int resZ);                                 
RLAPI Mesh GenMeshCube(float width, float height, float length);                                        
RLAPI Mesh GenMeshSphere(float radius, int rings, int slices);                                          