rlctbg/raylib.py


_rl.MeasureText.argtypes = [c_char_p, c_int]
_rl.MeasureText.restype = c_int
def measure_text(text: bytes, font_size: int) -> int:
    return _rl.MeasureText(text, font_size)


_rl.MeasureTextEx.argtypes = [Font, c_char_p, c_float, c_float]
_rl.MeasureTextEx.restype = Vector2
def measure_text_ex(font: Font, text: bytes, font_size: float, spacing: float) -> Vector2:
    return _rl.MeasureTextEx(font, text, font_size, spacing)


_rl.GetGlyphIndex.argtypes = [Font, c_int]
_rl.GetGlyphIndex.restype = c_int
def get_glyph_index(font: Font, codepoint: int) -> int:
    return _rl.GetGlyphIndex(font, codepoint)


_rl.TextIsEqual.argtypes = [c_char_p, c_char_p]
_rl.TextIsEqual.restype = c_bool
def text_is_equal(text1: bytes, text2: bytes) -> bool:
    return _rl.TextIsEqual(text1, text2)


_rl.TextLength.argtypes = [c_char_p]
_rl.TextLength.restype = c_uint
def text_length(text: bytes) -> int:
    return _rl.TextLength(text)


_rl.TextFormat.argtypes = [c_char_p]
_rl.TextFormat.restype = c_char_p
def text_format(text: bytes, *args) -> bytes:
    return _rl.TextFormat(text)


_rl.TextSubtext.argtypes = [c_char_p, c_int, c_int]
_rl.TextSubtext.restype = c_char_p
def text_subtext(text: bytes, position: int, length: int) -> bytes:
    return _rl.TextSubtext(text, position, length)


_rl.TextReplace.argtypes = [c_char_p, c_char_p, c_char_p]
_rl.TextReplace.restype = c_char_p
def text_replace(text: bytes, replace: bytes, by: bytes) -> bytes:
    return _rl.TextReplace(text, replace, by)


_rl.TextInsert.argtypes = [c_char_p, c_char_p, c_int]
_rl.TextInsert.restype = c_char_p
def text_insert(text: bytes, insert: bytes, position: int) -> bytes:
    return _rl.TextInsert(text, insert, position)


_rl.TextJoin.argtypes = [POINTER(c_char_p), c_int, c_char_p]
_rl.TextJoin.restype = c_char_p
def text_join(text_list: POINTER(c_char_p), count: int, delimiter: bytes) -> bytes:
    return _rl.TextJoin(text_list, count, delimiter)


_rl.TextSplit.argtypes = [c_char_p, c_char, POINTER(c_int)]
_rl.TextSplit.restype = POINTER(c_char_p)
def text_split(text: bytes, delimiter: bytes, count: POINTER(c_int)) -> POINTER(c_char_p):
    return _rl.TextSplit(text, delimiter, count)


_rl.TextAppend.argtypes = [c_char_p, c_char_p, POINTER(c_int)]
_rl.TextAppend.restype = None
def text_append(text: bytes, append: bytes, position: POINTER(c_int)) -> None:
    _rl.TextAppend(text, append, position)


_rl.TextFindIndex.argtypes = [c_char_p, c_char_p]
_rl.TextFindIndex.restype = c_int
def text_find_index(text: bytes, find: bytes) -> int:
    return _rl.TextFindIndex(text, find)


_rl.TextToUpper.argtypes = [c_char_p]
_rl.TextToUpper.restype = c_char_p
def text_to_upper(text: bytes) -> bytes:
    return _rl.TextToUpper(text)


_rl.TextToLower.argtypes = [c_char_p]
_rl.TextToLower.restype = c_char_p
def text_to_lower(text: bytes) -> bytes:
    return _rl.TextToLower(text)


_rl.TextToPascal.argtypes = [c_char_p]
_rl.TextToPascal.restype = c_char_p
def text_to_pascal(text: bytes) -> bytes:
    return _rl.TextToPascal(text)


_rl.TextToInteger.argtypes = [c_char_p]
_rl.TextToInteger.restype = c_int
def text_to_integer(text: bytes) -> int:
    return _rl.TextToInteger(text)


_rl.TextToUtf8.argtypes = [POINTER(c_int), c_int]
_rl.TextToUtf8.restype = c_char_p
def text_to_utf8(codepoints: POINTER(c_int), length: int) -> bytes:
    return _rl.TextToUtf8(codepoints, length)


_rl.GetCodepoints.argtypes = [c_char_p, POINTER(c_int)]
_rl.GetCodepoints.restype = POINTER(c_int)
def get_codepoints(text: bytes, count: POINTER(c_int)) -> POINTER(c_int):
    return _rl.GetCodepoints(text, count)


_rl.GetCodepointsCount.argtypes = [c_char_p]
_rl.GetCodepointsCount.restype = c_int
def get_codepoints_count(text: bytes) -> int:
    return _rl.GetCodepointsCount(text)


_rl.GetNextCodepoint.argtypes = [c_char_p, POINTER(c_int)]
_rl.GetNextCodepoint.restype = c_int
def get_next_codepoint(text: bytes, bytes_processed: POINTER(c_int)) -> int:
    return _rl.GetNextCodepoint(text, bytes_processed)


_rl.CodepointToUtf8.argtypes = [c_int, POINTER(c_int)]
_rl.CodepointToUtf8.restype = c_char_p
def codepoint_to_utf8(codepoint: int, byte_length: POINTER(c_int)) -> bytes:
    return _rl.CodepointToUtf8(codepoint, byte_length)


_rl.DrawLine3D.argtypes = [Vector3, Vector3, Color]
_rl.DrawLine3D.restype = None
def draw_line3_d(start_pos: Vector3, end_pos: Vector3, color: Color) -> None:
    _rl.DrawLine3D(start_pos, end_pos, color)


_rl.DrawCircle3D.argtypes = [Vector3, c_float, Vector3, c_float, Color]
_rl.DrawCircle3D.restype = None
def draw_circle3_d(center: Vector3, radius: float, rotation_axis: Vector3, rotation_angle: float, color: Color) -> None:
    _rl.DrawCircle3D(center, radius, rotation_axis, rotation_angle, color)


_rl.DrawCube.argtypes = [Vector3, c_float, c_float, c_float, Color]
_rl.DrawCube.restype = None
def draw_cube(position: Vector3, width: float, height: float, length: float, color: Color) -> None:
    _rl.DrawCube(position, width, height, length, color)


_rl.DrawCubeV.argtypes = [Vector3, Vector3, Color]
_rl.DrawCubeV.restype = None
def draw_cube_v(position: Vector3, size: Vector3, color: Color) -> None:
    _rl.DrawCubeV(position, size, color)


_rl.DrawCubeWires.argtypes = [Vector3, c_float, c_float, c_float, Color]
_rl.DrawCubeWires.restype = None
def draw_cube_wires(position: Vector3, width: float, height: float, length: float, color: Color) -> None:
    _rl.DrawCubeWires(position, width, height, length, color)


_rl.DrawCubeWiresV.argtypes = [Vector3, Vector3, Color]
_rl.DrawCubeWiresV.restype = None
def draw_cube_wires_v(position: Vector3, size: Vector3, color: Color) -> None:
    _rl.DrawCubeWiresV(position, size, color)


_rl.DrawCubeTexture.argtypes = [Texture2D, Vector3, c_float, c_float, c_float, Color]
_rl.DrawCubeTexture.restype = None
def draw_cube_texture(texture: Texture2D, position: Vector3, width: float, height: float, length: float, color: Color) -> None:
    _rl.DrawCubeTexture(texture, position, width, height, length, color)


_rl.DrawSphere.argtypes = [Vector3, c_float, Color]
_rl.DrawSphere.restype = None
def draw_sphere(center_pos: Vector3, radius: float, color: Color) -> None:
    _rl.DrawSphere(center_pos, radius, color)


_rl.DrawSphereEx.argtypes = [Vector3, c_float, c_int, c_int, Color]
_rl.DrawSphereEx.restype = None
def draw_sphere_ex(center_pos: Vector3, radius: float, rings: int, slices: int, color: Color) -> None:
    _rl.DrawSphereEx(center_pos, radius, rings, slices, color)


_rl.DrawSphereWires.argtypes = [Vector3, c_float, c_int, c_int, Color]
_rl.DrawSphereWires.restype = None
def draw_sphere_wires(center_pos: Vector3, radius: float, rings: int, slices: int, color: Color) -> None:
    _rl.DrawSphereWires(center_pos, radius, rings, slices, color)


_rl.DrawCylinder.argtypes = [Vector3, c_float, c_float, c_float, c_int, Color]
_rl.DrawCylinder.restype = None
def draw_cylinder(position: Vector3, radius_top: float, radius_bottom: float, height: float, slices: int, color: Color) -> None:
    _rl.DrawCylinder(position, radius_top, radius_bottom, height, slices, color)


_rl.DrawCylinderWires.argtypes = [Vector3, c_float, c_float, c_float, c_int, Color]
_rl.DrawCylinderWires.restype = None
def draw_cylinder_wires(position: Vector3, radius_top: float, radius_bottom: float, height: float, slices: int, color: Color) -> None:
    _rl.DrawCylinderWires(position, radius_top, radius_bottom, height, slices, color)


_rl.DrawPlane.argtypes = [Vector3, Vector2, Color]
_rl.DrawPlane.restype = None
def draw_plane(center_pos: Vector3, size: Vector2, color: Color) -> None:
    _rl.DrawPlane(center_pos, size, color)


_rl.DrawRay.argtypes = [Ray, Color]
_rl.DrawRay.restype = None
def draw_ray(ray: Ray, color: Color) -> None:
    _rl.DrawRay(ray, color)


_rl.DrawGrid.argtypes = [c_int, c_float]
_rl.DrawGrid.restype = None
def draw_grid(slices: int, spacing: float) -> None:
    _rl.DrawGrid(slices, spacing)


_rl.DrawGizmo.argtypes = [Vector3]
_rl.DrawGizmo.restype = None
def draw_gizmo(position: Vector3) -> None:
    _rl.DrawGizmo(position)


_rl.LoadModel.argtypes = [c_char_p]
_rl.LoadModel.restype = Model
def load_model(file_name: bytes) -> Model:
    return _rl.LoadModel(file_name)


_rl.LoadModelFromMesh.argtypes = [Mesh]
_rl.LoadModelFromMesh.restype = Model
def load_model_from_mesh(mesh: Mesh) -> Model:
    return _rl.LoadModelFromMesh(mesh)


_rl.UnloadModel.argtypes = [Model]
_rl.UnloadModel.restype = None
def unload_model(model: Model) -> None:
    _rl.UnloadModel(model)


_rl.LoadMeshes.argtypes = [c_char_p, POINTER(c_int)]
_rl.LoadMeshes.restype = POINTER(Mesh)
def load_meshes(file_name: bytes, mesh_count: POINTER(c_int)) -> POINTER(Mesh):
    return _rl.LoadMeshes(file_name, mesh_count)


_rl.ExportMesh.argtypes = [Mesh, c_char_p]
_rl.ExportMesh.restype = None
def export_mesh(mesh: Mesh, file_name: bytes) -> None:
    _rl.ExportMesh(mesh, file_name)


_rl.UnloadMesh.argtypes = [Mesh]
_rl.UnloadMesh.restype = None
def unload_mesh(mesh: Mesh) -> None:
    _rl.UnloadMesh(mesh)


_rl.LoadMaterials.argtypes = [c_char_p, POINTER(c_int)]
_rl.LoadMaterials.restype = POINTER(Material)
def load_materials(file_name: bytes, material_count: POINTER(c_int)) -> POINTER(Material):
    return _rl.LoadMaterials(file_name, material_count)


_rl.LoadMaterialDefault.argtypes = []
_rl.LoadMaterialDefault.restype = Material
def load_material_default() -> Material:
    return _rl.LoadMaterialDefault()


_rl.UnloadMaterial.argtypes = [Material]
_rl.UnloadMaterial.restype = None
def unload_material(material: Material) -> None:
    _rl.UnloadMaterial(material)


_rl.SetMaterialTexture.argtypes = [POINTER(Material), c_int, Texture2D]
_rl.SetMaterialTexture.restype = None
def set_material_texture(material: POINTER(Material), map_type: int, texture: Texture2D) -> None:
    _rl.SetMaterialTexture(material, map_type, texture)


_rl.SetModelMeshMaterial.argtypes = [POINTER(Model), c_int, c_int]
_rl.SetModelMeshMaterial.restype = None
def set_model_mesh_material(model: POINTER(Model), mesh_id: int, material_id: int) -> None:
    _rl.SetModelMeshMaterial(model, mesh_id, material_id)


_rl.LoadModelAnimations.argtypes = [c_char_p, POINTER(c_int)]
_rl.LoadModelAnimations.restype = POINTER(ModelAnimation)
def load_model_animations(file_name: bytes, anims_count: POINTER(c_int)) -> POINTER(ModelAnimation):
    return _rl.LoadModelAnimations(file_name, anims_count)


_rl.UpdateModelAnimation.argtypes = [Model, ModelAnimation, c_int]
_rl.UpdateModelAnimation.restype = None
def update_model_animation(model: Model, anim: ModelAnimation, frame: int) -> None:
    _rl.UpdateModelAnimation(model, anim, frame)


_rl.UnloadModelAnimation.argtypes = [ModelAnimation]
_rl.UnloadModelAnimation.restype = None
def unload_model_animation(anim: ModelAnimation) -> None:
    _rl.UnloadModelAnimation(anim)


_rl.IsModelAnimationValid.argtypes = [Model, ModelAnimation]
_rl.IsModelAnimationValid.restype = c_bool
def is_model_animation_valid(model: Model, anim: ModelAnimation) -> bool:
    return _rl.IsModelAnimationValid(model, anim)


_rl.GenMeshPoly.argtypes = [c_int, c_float]
_rl.GenMeshPoly.restype = Mesh
def gen_mesh_poly(sides: int, radius: float) -> Mesh:
    return _rl.GenMeshPoly(sides, radius)


_rl.GenMeshPlane.argtypes = [c_float, c_float, c_int, c_int]
_rl.GenMeshPlane.restype = Mesh
def gen_mesh_plane(width: float, length: float, res_x: int, res_z: int) -> Mesh:
    return _rl.GenMeshPlane(width, length, res_x, res_z)


_rl.GenMeshCube.argtypes = [c_float, c_float, c_float]
_rl.GenMeshCube.restype = Mesh
def gen_mesh_cube(width: float, height: float, length: float) -> Mesh:
    return _rl.GenMeshCube(width, height, length)


_rl.GenMeshSphere.argtypes = [c_float, c_int, c_int]
_rl.GenMeshSphere.restype = Mesh
def gen_mesh_sphere(radius: float, rings: int, slices: int) -> Mesh:
    return _rl.GenMeshSphere(radius, rings, slices)

